--- a/public/css/app.css
+++ b/public/css/app.css
@@ -490,6 +490,9 @@ video {
   white-space: nowrap;
   border-width: 0;
 }
+.invisible {
+  visibility: hidden;
+}
 .fixed {
   position: fixed;
 }
@@ -521,6 +524,9 @@ video {
 .right-0 {
   right: 0px;
 }
+.right-2 {
+  right: 0.5rem;
+}
 .right-4 {
   right: 1rem;
 }
@@ -536,11 +542,17 @@ video {
 .top-3 {
   top: 0.75rem;
 }
+.top-4 {
+  top: 1rem;
+}
 .top-7 {
   top: 1.75rem;
 }
 .float-right {
   float: right;
+}
+.m-2 {
+  margin: 0.5rem;
 }
 .m-auto {
   margin: auto;
@@ -580,6 +592,10 @@ video {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 .mb-1 {
   margin-bottom: 0.25rem;
@@ -641,6 +657,21 @@ video {
 .mt-8 {
   margin-top: 2rem;
 }
+.mt-\[-10px\] {
+  margin-top: -10px;
+}
+.mt-\[-5px\] {
+  margin-top: -5px;
+}
+.mt-\[-15px\] {
+  margin-top: -15px;
+}
+.mb-\[-15px\] {
+  margin-bottom: -15px;
+}
+.mb-\[-5px\] {
+  margin-bottom: -5px;
+}
 .block {
   display: block;
 }
@@ -662,6 +693,9 @@ video {
 .h-14 {
   height: 3.5rem;
 }
+.h-20 {
+  height: 5rem;
+}
 .h-40 {
   height: 10rem;
 }
@@ -680,6 +714,9 @@ video {
 .h-screen {
   height: 100vh;
 }
+.min-h-\[50px\] {
+  min-height: 50px;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -688,6 +725,9 @@ video {
 }
 .w-1\/3 {
   width: 33.333333%;
+}
+.w-14 {
+  width: 3.5rem;
 }
 .w-16 {
   width: 4rem;
@@ -698,14 +738,26 @@ video {
 .w-2\/5 {
   width: 40%;
 }
+.w-2\/6 {
+  width: 33.333333%;
+}
 .w-24 {
   width: 6rem;
+}
+.w-28 {
+  width: 7rem;
+}
+.w-3\/5 {
+  width: 60%;
 }
 .w-32 {
   width: 8rem;
 }
 .w-36 {
   width: 9rem;
+}
+.w-4 {
+  width: 1rem;
 }
 .w-40 {
   width: 10rem;
@@ -740,11 +792,21 @@ video {
 .w-full {
   width: 100%;
 }
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
 .cursor-pointer {
   cursor: pointer;
 }
+.resize-none {
+  resize: none;
+}
 .flex-col {
   flex-direction: column;
+}
+.items-start {
+  align-items: flex-start;
 }
 .items-center {
   align-items: center;
@@ -785,8 +847,14 @@ video {
 .rounded-md {
   border-radius: 0.375rem;
 }
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
 .rounded-br-\[0px\] {
   border-bottom-right-radius: 0px;
+}
+.rounded-tl-\[0px\] {
+  border-top-left-radius: 0px;
 }
 .rounded-tr-\[0px\] {
   border-top-right-radius: 0px;
@@ -803,6 +871,10 @@ video {
 .border-dashed {
   border-style: dashed;
 }
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
 .border-principal-gray {
   --tw-border-opacity: 1;
   border-color: rgb(57 62 70 / var(--tw-border-opacity));
@@ -814,6 +886,10 @@ video {
 .border-secondary-gray {
   --tw-border-opacity: 1;
   border-color: rgb(146 154 171 / var(--tw-border-opacity));
+}
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 .bg-green-500 {
   --tw-bg-opacity: 1;
@@ -880,6 +956,13 @@ video {
 }
 .p-4 {
   padding: 1rem;
+}
+.p-\[5px\] {
+  padding: 5px;
+}
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -948,6 +1031,12 @@ video {
 .pl-4 {
   padding-left: 1rem;
 }
+.pl-5 {
+  padding-left: 1.25rem;
+}
+.pl-6 {
+  padding-left: 1.5rem;
+}
 .pr-3 {
   padding-right: 0.75rem;
 }
@@ -1009,6 +1098,14 @@ video {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 .text-hard-gray {
   --tw-text-opacity: 1;
@@ -1098,6 +1195,15 @@ video {
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
 
 
 @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
@@ -1115,9 +1221,32 @@ video {
 }
 
 
+.hover\:bg-gray-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+
+.hover\:bg-gray-input:hover {
+  background-color: rgba(238, 238, 238, .7);
+}
+
+
 .hover\:bg-secondary-gray:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(146 154 171 / var(--tw-bg-opacity));
+}
+
+
+.hover\:bg-slate-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
+
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 
