--- a/views/publications/publication.pug
+++ b/views/publications/publication.pug
@@ -59,6 +59,58 @@ block contenido
                 p.text-principal-gray.text-xl.underline= rightOfUse.name
                 img#btnInfoRightOfUse(src="/img/project/info.svg", alt="" class="ml-2 w-5 cursor-pointer")
 
+        #sectionBottom(class="w-full flex px-10") 
+            if user
+                #comments(class="w-2/6") 
+                    h2(class="text-3xl my-4") Comentarios 
+                    .myComment(class="flex items-start mb-8")
+                        img(src=user.image_url, alt="" class="w-14 mr-2")
+                        div(class="bg-gray-200 rounded-[10px] rounded-tl-[0px] w-full")
+                            textarea#commentText(name="commentText" placeholder="Agrega un comentario" class="bg-transparent p-3 pl-6 w-full h-20 outline-none resize-none")
+                            div.flex.items-center.justify-between
+                                div(class="flex text-xs ml-4 text-principal-gray")
+                                    p#countText 0 
+                                    span /500
+                                span#commentError(class="invisible text-red-600 ml-4 text-xs")
+                                button#btnComment(class="rounded-lg shadow-lg border border-principal-gray float-right p-[5px] px-4 m-2 mr-4 hover:bg-gray-input") Comentar
+
+                    #generalComments
+                        if comments.length == 0
+                            div#noComments
+                                p(class="text-2xl text-gray-500 text-center") Todavia no hay comentarios 
+                                img(src="/img/project/comments.svg", alt="No comments" class="m-auto my-5 w-40")
+                        
+                        if comments.length > 0
+                            each comment in comments 
+                                div(class="comment mb-8")
+                                    div.flex                
+                                        div(class="w-14 h-14 mr-2 bg-cover bg-center bg-no-repeat" style=`background-image: url(${comment.user.image_url})`) 
+                                        
+                                        div(class="flex flex-col w-full")
+                                            div(class="flex justify-between w-full mt-[-10px]")
+                                                p.font-bold.text-principal-gray= `${comment.user.name} ${comment.user.lastname}`
+                                                p.text-gray-600.text-sm= comment.timeThatPassed
+                                            div(class="bg-gray-200 rounded-[10px] rounded-tl-[0px] min-h-[50px] p-3 pl-5 relative") 
+                                                if comment.user_id == user.id
+                                                    button(class="btnCommentOptions absolute right-2 top-0")
+                                                        img(src="/img/project/options-horizontal.svg", alt="comment options" class="w-4 cursor-hover")
+                                                    div(class="hidden commentOptions absolute bg-gray-200 top-4 right-0 w-28 shadow-xl border border-gray-400 rounded") 
+                                                        div(class="btnCommentDelete flex justify-around items-center hover:bg-gray-300 p-3 cursor-pointer" data-comment-id= comment.id)
+                                                            i(class="fa-solid fa-trash text-red-700 text-xs")
+                                                            p.text-red-700.text-xs Eliminar 
+                                                           
+                                                p= comment.description
+
+                            div(class="seeMore w-fit m-auto text-center cursor-pointer rounded-3xl p-2 hover:bg-gray-200")
+                                p(class="mb-[-5px]") Ver más
+                                i(class="fa-solid fa-angles-down")
+
+            #rightSectionBottom(class="w-3/5") 
+                #ratingSection 
+                #recomendations
+
+
+
 
     div#alertLogin(class="w-full h-screen fixed bottom-0 left-0 flex items-center justify-center bg-neutral-800 bg-opacity-40").hidden
         div(class="w-2/5 bg-white p-10 text-center relative")
@@ -69,7 +121,29 @@ block contenido
             a(href="/auth/login") 
                 button#btnGoLogin(class="mt-10 bg-principal-gray hover:bg-secondary-gray h-11 w-52 m-auto text-polished-white") Ir a iniciar sesión
 
+
+    template#templateComment
+        div(class="comment mb-8")
+            div.flex                
+                div(class="commentUserImage w-14 h-14 mr-2 bg-cover bg-center bg-no-repeat" style=`background-image: url(${user.image_url})`) 
+                
+                div(class="flex flex-col w-full")
+                    div(class="flex justify-between w-full mt-[-10px]")
+                        p.commentFullName.font-bold.text-principal-gray= `${user.name} ${user.lastname}`
+                        p.commentTimeThatPassed.text-gray-600.text-sm
+
+                    div(class="bg-gray-200 rounded-[10px] rounded-tl-[0px] min-h-[50px] p-3 pl-5 relative") 
+                        button(class="btnCommentOptions absolute right-2 top-0")
+                            img(src="/img/project/options-horizontal.svg", alt="comment options" class="w-4 cursor-hover")
+                        div(class="hidden commentOptions absolute bg-gray-200 top-4 right-0 w-28 shadow-xl border border-gray-400 rounded") 
+                            div(class="btnCommentDelete flex justify-around items-center hover:bg-gray-300 p-3 cursor-pointer")
+                                i(class="fa-solid fa-trash text-red-700 text-xs")
+                                p.text-red-700.text-xs Eliminar 
+
+                        p.commentDescription
+                        
 block scripts
     script(src="https://kit.fontawesome.com/e6a1497caa.js" crossorigin="anonymous")
     script(src="/js/rating.js")
     script(src="/js/clicksPublication.js")
+    script(src="/js/addComment.js")
