--- a/public/css/app.css
+++ b/public/css/app.css
@@ -548,6 +548,9 @@ video {
 .top-7 {
   top: 1.75rem;
 }
+.z-20 {
+  z-index: 20;
+}
 .float-right {
   float: right;
 }
@@ -596,10 +599,6 @@ video {
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
-}
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
 }
 .mb-1 {
   margin-bottom: 0.25rem;
@@ -661,9 +660,6 @@ video {
 .mt-4 {
   margin-top: 1rem;
 }
-.mt-6 {
-  margin-top: 1.5rem;
-}
 .mt-7 {
   margin-top: 1.75rem;
 }
@@ -697,6 +693,12 @@ video {
 .h-20 {
   height: 5rem;
 }
+.h-3\/4 {
+  height: 75%;
+}
+.h-3\/5 {
+  height: 60%;
+}
 .h-40 {
   height: 10rem;
 }
@@ -708,6 +710,9 @@ video {
 }
 .h-6 {
   height: 1.5rem;
+}
+.h-72 {
+  height: 18rem;
 }
 .h-96 {
   height: 24rem;
@@ -721,21 +726,6 @@ video {
 }
 .h-screen {
   height: 100vh;
-}
-.h-5\/6 {
-  height: 83.333333%;
-}
-.h-80 {
-  height: 20rem;
-}
-.h-16 {
-  height: 4rem;
-}
-.h-72 {
-  height: 18rem;
-}
-.max-h-80 {
-  max-height: 20rem;
 }
 .max-h-96 {
   max-height: 24rem;
@@ -794,6 +784,9 @@ video {
 .w-5\/12 {
   width: 41.666667%;
 }
+.w-5\/6 {
+  width: 83.333333%;
+}
 .w-52 {
   width: 13rem;
 }
@@ -815,24 +808,15 @@ video {
 .w-8\/12 {
   width: 66.666667%;
 }
+.w-96 {
+  width: 24rem;
+}
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
 }
 .w-full {
   width: 100%;
-}
-.w-4\/6 {
-  width: 66.666667%;
-}
-.w-3\/6 {
-  width: 50%;
-}
-.w-5\/6 {
-  width: 83.333333%;
-}
-.w-44 {
-  width: 11rem;
 }
 .cursor-pointer {
   cursor: pointer;
@@ -968,6 +952,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
 .bg-secondary-gray {
   --tw-bg-opacity: 1;
   background-color: rgb(146 154 171 / var(--tw-bg-opacity));
@@ -1019,6 +1007,10 @@ video {
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -1075,6 +1067,9 @@ video {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
 .pl-12 {
   padding-left: 3rem;
 }
@@ -1104,6 +1099,9 @@ video {
 }
 .pt-10 {
   padding-top: 2.5rem;
+}
+.pt-12 {
+  padding-top: 3rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -1135,6 +1133,10 @@ video {
   font-size: 1rem;
   line-height: 1.5rem;
 }
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1147,10 +1149,6 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
 .font-bold {
   font-weight: 700;
 }
@@ -1162,6 +1160,9 @@ video {
 }
 .font-normal {
   font-weight: 400;
+}
+.font-semibold {
+  font-weight: 600;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1319,8 +1320,19 @@ video {
 }
 
 
+.hover\:text-principal-gray:hover {
+  --tw-text-opacity: 1;
+  color: rgb(57 62 70 / var(--tw-text-opacity));
+}
+
+
 .hover\:opacity-60:hover {
   opacity: 0.6;
+}
+
+
+.hover\:opacity-75:hover {
+  opacity: 0.75;
 }
 
 
