--- a/views/publications/publication.pug
+++ b/views/publications/publication.pug
@@ -24,7 +24,7 @@ block contenido
                     button#btnSendCategories(class="bg-principal-gray flex items-center justify-between hover:bg-secondary-gray h-11 w-40")
                         span.w-full.text-white Descargar
                         img(src="/img/project/download.svg", alt="").w-6.mr-2
-                if user
+                if user.id === userPost.id
                     button#btnOptions(class="bg-transparent")
                         img(src="/img/project/options.svg", alt="").w-8.ml-2
                     div#optionsPublication(class="hidden absolute bg-secondary-gray top-16 right-4 w-2/3 rounded-[10px] rounded-tr-[0px] p-3 shadow-md")
@@ -172,15 +172,27 @@ block contenido
 
                     button#btnSave(type="submit" class="bg-green-700 text-white font-normal mt-4 mr-2 w-28 p-2") Guardar
 
+        div#deletePublication(class="hidden w-full h-screen fixed bottom-0 left-0 flex items-center justify-center bg-neutral-800 bg-opacity-40 z-20")
+            div#viewDelete(class="bg-white px-16 pt-12 pb-6 w-3/5 flex flex-col justify-between h-3/5") 
+                div(class="h-3/4 flex flex-col justify-between items-center")
+                    img(src="/img/project/deleteUnDraw.svg", alt="Lustracion eliminar" class="w-96")
+                    h5#titleDelete(class="text-4xl font-bold text-principal-gray") Eliminar Publicación 
+                    p#textDelete(class="text-lg text-principal-gray text-center") ¿Estás seguro de que deseas eliminar esta publicación? Ten en cuenta que esta acción no se puede deshacer y la publicación no podrá ser recuperada.
 
-    div#alertLogin(class="w-full h-screen fixed bottom-0 left-0 flex items-center justify-center bg-neutral-800 bg-opacity-40").hidden
-        div(class="w-2/5 bg-white p-10 text-center relative")
-            i#btnCloseAlertLogin(class="fa-solid fa-xmark absolute left-3 top-3 cursor-pointer")
-            div 
-                h4.font-medium.text-4xl.mb-2 Inicia Sesion 
-                p Debes iniciar sesión para poder calificar la imagen
-            a(href="/auth/login") 
-                button#btnGoLogin(class="mt-10 bg-principal-gray hover:bg-secondary-gray h-11 w-52 m-auto text-polished-white") Ir a iniciar sesión
+                div#btnsDeleteOrCancel
+                    button#btnConfirmDelete(class="block bg-red-600 text-white font-semibold w-64 m-auto p-3 hover:opacity-75") Eliminar
+                    button#btnCancelDelete(class="block bg-transparent font-semibold text-secondary-gray w-24 m-auto mt-2 p-2 rounded-3xl hover:text-principal-gray hover:bg-gray-input") Cancelar
+
+
+    if !user
+        div#alertLogin(class="w-full h-screen fixed bottom-0 left-0 flex items-center justify-center bg-neutral-800 bg-opacity-40").hidden
+            div(class="w-2/5 bg-white p-10 text-center relative")
+                i#btnCloseAlertLogin(class="fa-solid fa-xmark absolute left-3 top-3 cursor-pointer")
+                div 
+                    h4.font-medium.text-4xl.mb-2 Inicia Sesion 
+                    p Debes iniciar sesión para poder calificar la imagen
+                a(href="/auth/login") 
+                    button#btnGoLogin(class="mt-10 bg-principal-gray hover:bg-secondary-gray h-11 w-52 m-auto text-polished-white") Ir a iniciar sesión
 
     if user
         template#templateComment
@@ -203,25 +215,25 @@ block contenido
 
                             p.commentDescription
 
-    template#templateComment2
-        div(class="comment mb-8")
-            div.flex                
-                div(class="commentUserImage w-14 h-14 mr-2 bg-cover bg-center bg-no-repeat") 
-                
-                div(class="flex flex-col w-full")
-                    div(class="flex justify-between w-full mt-[-10px]")
-                        p.commentFullName.font-bold.text-principal-gray
-                        p.commentTimeThatPassed.text-gray-600.text-sm
+        template#templateComment2
+            div(class="comment mb-8")
+                div.flex                
+                    div(class="commentUserImage w-14 h-14 mr-2 bg-cover bg-center bg-no-repeat") 
+                    
+                    div(class="flex flex-col w-full")
+                        div(class="flex justify-between w-full mt-[-10px]")
+                            p.commentFullName.font-bold.text-principal-gray
+                            p.commentTimeThatPassed.text-gray-600.text-sm
 
-                    div(class="divCommentOptions bg-gray-200 rounded-[10px] rounded-tl-[0px] min-h-[50px] p-3 pl-5 relative") 
-                        button(class="hidden btnCommentOptions absolute right-2 top-0")
-                            img(src="/img/project/options-horizontal.svg", alt="comment options" class="w-4 cursor-hover")
-                        div(class="hidden commentOptions absolute bg-gray-200 top-4 right-0 w-28 shadow-xl border border-gray-400 rounded") 
-                            div(class="btnCommentDelete flex justify-around items-center hover:bg-gray-300 p-3 cursor-pointer")
-                                i(class="fa-solid fa-trash text-red-700 text-xs")
-                                p.text-red-700.text-xs Eliminar 
+                        div(class="divCommentOptions bg-gray-200 rounded-[10px] rounded-tl-[0px] min-h-[50px] p-3 pl-5 relative") 
+                            button(class="hidden btnCommentOptions absolute right-2 top-0")
+                                img(src="/img/project/options-horizontal.svg", alt="comment options" class="w-4 cursor-hover")
+                            div(class="hidden commentOptions absolute bg-gray-200 top-4 right-0 w-28 shadow-xl border border-gray-400 rounded") 
+                                div(class="btnCommentDelete flex justify-around items-center hover:bg-gray-300 p-3 cursor-pointer")
+                                    i(class="fa-solid fa-trash text-red-700 text-xs")
+                                    p.text-red-700.text-xs Eliminar 
 
-                        p.commentDescription
+                            p.commentDescription
 
     
                         
@@ -230,6 +242,7 @@ block scripts
         script(src="/js/getComments.js")
         script(src="/js/addComment.js")
         script(src="/js/editPublication.js")
+        script(src="/js/deletePublication.js")
 
     script(src="https://kit.fontawesome.com/e6a1497caa.js" crossorigin="anonymous")
     script(src="/js/clicksPublication.js")
